2003-06-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/emacs.tcl (sn_ensure_emacs_running):
	Invoke sn_unset_tmp_dir before running gnudoit
	and invoke sn_set_tmp_dir when finished. This
	avoids a problem that was causing gnudoit to
	fail because it was not finding unix domain
	sockets when the TMPDIR environment variable
	was set to .snprj instead of /tmp.
	* gui/misc.tcl (sn_unset_tmp_dir): Add helper
	to undo the changes made by sn_set_tmp_dir.

2003-06-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/emacs.tcl (sn_ensure_emacs_running):
	Remove conflict with gnudoit over the TMPDIR
	environment variable. It appears that gnudoit
	will fail when TMPDIR is set to .../.snprj
	so avoid setting it.

2003-06-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add support
	for &, the reference operator. Update
	function arguments pattern to support
	use of a reference operator before
	a variable in the argument list.
	Remove {ws} from the front of the
	line comment rule since this is
	now handled by the greedy {wsn} rule.
	* tests/parsers/php.test: Add token
	parsing test for reference operator.

2003-06-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add a rule that
	matches any series of space, tab, and
	newline characters. Remove the rule that
	matched a plain newline since this is now
	handled by the new rule. This new implementation
	does not execute the default character
	rule for each white space matched so
	it should execute more quickly.

2003-06-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Rework the token
	dump output so that newlines are printed
	as \n and double quotes are printed as \".
	* tests/parsers/php.test: Reformat token
	tests since a newline embedded in the
	token value is not printed as \n. Test for
	a \" in the token value.